WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192236
Can’t use RalphLauren.com on iPad because hover menus don’t stay up
https://bugs.webkit.org/show_bug.cgi?id=192236
Summary
Can’t use RalphLauren.com on iPad because hover menus don’t stay up
alan
Reported
2018-11-30 11:27:34 PST
Tap on the menus always turns into a click (->page load).
Attachments
Patch
(12.37 KB, patch)
2018-11-30 11:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.44 KB, patch)
2018-11-30 15:30 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-11-30 11:27:48 PST
<
rdar://problem/45792118
>
alan
Comment 2
2018-11-30 11:51:43 PST
Created
attachment 356212
[details]
Patch
EWS Watchlist
Comment 3
2018-11-30 11:54:49 PST
Attachment 356212
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:40: Extra space between bool and _WKObservingStyleRecalScheduling [whitespace/declaration] [3] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:40: _WKObservingStyleRecalScheduling is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:41: Extra space between bool and _WKObservingNextStyleRecalc [whitespace/declaration] [3] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:41: _WKObservingNextStyleRecalc is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 4 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2018-11-30 11:59:09 PST
Comment on
attachment 356212
[details]
Patch r=me platform/ios/wak is so weird!
Simon Fraser (smfr)
Comment 5
2018-11-30 13:35:46 PST
Comment on
attachment 356212
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356212&action=review
> LayoutTests/fast/events/touch/ios/hover-when-style-change-is-async-expected.txt:1 > +PASS if NOT clicked.
This is a pretty confusing pass result. It should read "PASS: did not send a click when blah....."
alan
Comment 6
2018-11-30 15:30:16 PST
Created
attachment 356247
[details]
Patch
EWS Watchlist
Comment 7
2018-11-30 15:33:18 PST
Attachment 356247
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:40: Extra space between bool and _WKObservingStyleRecalScheduling [whitespace/declaration] [3] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:40: _WKObservingStyleRecalScheduling is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:41: Extra space between bool and _WKObservingNextStyleRecalc [whitespace/declaration] [3] ERROR: Source/WebCore/platform/ios/wak/WKContentObservation.cpp:41: _WKObservingNextStyleRecalc is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 4 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8
2018-11-30 16:08:59 PST
Comment on
attachment 356247
[details]
Patch Clearing flags on attachment: 356247 Committed
r238759
: <
https://trac.webkit.org/changeset/238759
>
WebKit Commit Bot
Comment 9
2018-11-30 16:09:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug